Fix: Refactor parsing data tables (#24)